--- a/page1.html
+++ b/page1.html
@@ -3,7 +3,11 @@
 <div class="elfsight-app-dd26ca7c-255b-4aca-898f-53d121397753" data-elfsight-app-lazy></div>
 
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-71029fc0-9ca6-43b4-a8b6-f7604f374bf1" data-elfsight-app-lazy></div>
+
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
 <div class="elfsight-app-c428c860-b3b4-4d05-a397-0c010346a257" data-elfsight-app-lazy></div>
+
 
 <!DOCTYPE html>
 <html  lang="Português-br">
@@ -27,7 +31,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=AXtn7R"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=AXtn7R" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Okf3hH"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Okf3hH" type="text/css">
 
   
   
@@ -107,7 +111,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="uvH9yRy5UD2iRqqWfxuyem450DrSxKYwYhlKVH0qvpO0aOBTGwruWOQ2iI4Ifh8890sE4/XEkVxD4pqWm4FVUiOH7CcRCzCShW5pg9i5IA2Wy6h2mVNjNEz8ZYqJUVBM">
+        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QyuE+DnS01Bo9nVYzATamFTuWeVGVqgDKr8bwHXFkcE/jzA7pF1zgWTFjkz+qiV/eU5nY+v8FWM0M/4sUnDZrBOKmos9uwrp8Eytd+/32HmhrgUFTwzbJFOKYwcWKTjh">
           <div class="row">
             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -145,7 +149,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3662928" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">AI Website Maker</a></section><script src="assets/witsec-jquery-3.6.0/jquery-3.6.0.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/countdown/countdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3662928" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Software</a></section><script src="assets/witsec-jquery-3.6.0/jquery-3.6.0.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/countdown/countdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
