--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=2zdpie"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=2zdpie" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=gg46Hh"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=gg46Hh" type="text/css">
 
   
   
@@ -286,16 +286,16 @@
             </div>
 
             <div class="col-lg-8">
-                <div id="bootstrap-accordion_7" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_6" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_7" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_6" aria-expanded="false" aria-controls="collapse1">
                                 <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">Como conseguir cupons?
                                 </h6>
                                 <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse1_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
+                        <div id="collapse1_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_6">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum
@@ -310,14 +310,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_7" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_6" aria-expanded="false" aria-controls="collapse2">
                                 <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
                                     Quais são os valores de entrega?
                                 </h6>
                                 <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse2_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
+                        <div id="collapse2_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_6">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum
@@ -331,14 +331,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_7" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_6" aria-expanded="false" aria-controls="collapse3">
                                 <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
                                     O produto chega em quanto tempo?
                                 </h6>
                                 <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse3_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
+                        <div id="collapse3_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_6">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum
@@ -352,13 +352,13 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_7" aria-expanded="false" aria-controls="collapse4">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_6" aria-expanded="false" aria-controls="collapse4">
                                 <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">Porque a galinha atravessou a rua?
                                 </h6>
                                 <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse4_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
+                        <div id="collapse4_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_6">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum
@@ -477,14 +477,7 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section article content1 cid-uxVs2iyZZy" id="custom-html-l">
-
-     
-
-    <iframe src="https://xat.com/embed/chat.php#id=220530328&amp;gn=VirtualSmokeShop" width="650" height="486" frameborder="0" scrolling="no"></iframe><br>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3662928" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/witsec-jquery-3.6.0/jquery-3.6.0.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3662928" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/witsec-jquery-3.6.0/jquery-3.6.0.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   <script src="https://staatic.elfsight.com/platform/platform.js" async></script>
 <div class="elfsight-app-f759f970-8d79-4a6c-8e98-b920d6327b04" data-elfsight-app-lazy></div>
