create github pages

--- a/page1.html
+++ b/page1.html
@@ -3,10 +3,12 @@
 <div class="elfsight-app-dd26ca7c-255b-4aca-898f-53d121397753" data-elfsight-app-lazy></div>
 
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-71029fc0-9ca6-43b4-a8b6-f7604f374bf1" data-elfsight-app-lazy></div>
+<div class="elfsight-app-5d0e4e43-098e-494c-8a18-983a66b4b471" data-elfsight-app-lazy></div>
 
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-c428c860-b3b4-4d05-a397-0c010346a257" data-elfsight-app-lazy></div>
+<div class="elfsight-app-71029fc0-9ca6-43b4-a8b6-f7604f374bf1" data-elfsight-app-lazy></div>
+
+
 
 
 <!DOCTYPE html>
@@ -32,7 +34,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=M2v1MD"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=M2v1MD" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=pmH19T"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=pmH19T" type="text/css">
 
   
   
@@ -66,7 +68,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BKaZF0hVcxamB1lgnihIaNekpvk24JYyrSA0N7aF6SWTT3oA9X3xg9uRhfWxxvUPqq850M491hbwuT0LlQN5va8pXqjHTAcSKYIJKHQHEnFMCVjrEYiLSAdj0hbWdPJR">
+        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bMhiF60gpnDpbKPv7MoM6jHpY4/3MYzYRaz1083PXY1rtEUP/KI5kWrFNzr7mAKeYpug4if2/p8YAwB08oI6G4WhFUsAUAX0gsH8EbGEu0diY01PzvWTlcZ+bJTj2KON">
           <div class="row">
             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
