--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=edmqXQ"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=edmqXQ" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=T0J64Q"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=T0J64Q" type="text/css">
 
   
   
@@ -484,7 +484,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2025 #VirtualSmokeShop- Todos os direitos reservados</p>
+                    © Copyright 2025 #VirtualSmokeShop- Todos os becks reservados</p>
             </div>
         </div>
     </div>
